--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@playwright/test": "^1.28.1",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.20.4",
+		"@types/uuid": "^9.0.6",
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
 		"@typescript-eslint/parser": "^6.0.0",
 		"eslint": "^8.28.0",
@@ -35,6 +36,7 @@
 	"type": "module",
 	"dependencies": {
 		"@supabase/supabase-js": "^2.38.4",
-		"svelte-image-input": "^0.1.3"
+		"svelte-image-input": "^0.1.3",
+		"uuid": "^9.0.1"
 	}
 }
